engine/tests/compile_fail/tool_call_accumulator_args_exceeded.rs
use forge_types::ThoughtSignatureState;

fn main() {
    let _ = forge_engine::ToolCallAccumulator {
        id: "call-1".to_string(),
        name: "Read".to_string(),
        arguments_json: String::new(),
        thought_signature: ThoughtSignatureState::Unsigned,
        args_exceeded: false,
    };
}
